--- a/Generate_dataset/Jupyter_Code/Cross_Entropy.ipynb
+++ b/Generate_dataset/Jupyter_Code/Cross_Entropy.ipynb
@@ -85,6 +85,79 @@
     "value = loss(output, target)\n",
     "print('loss:\\n',value)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__咽喉反流CB_Loss__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import math\n",
+    "def cb_loss(y_pred, y_true, temp, beta, confusion):\n",
+    "    confusion_ = [torch.sum(temp == i) for i in range(8)]   #统计一张label中每个类别的像素点\n",
+    "\n",
+    "    weight = []\n",
+    "    weight_dice = []\n",
+    "    for i, n in zip(confusion_, confusion):\n",
+    "        if i == 0:\n",
+    "            weight.append(0)\n",
+    "            weight_dice.append(1)\n",
+    "        else:\n",
+    "            weight_dice.append(1)\n",
+    "            weight.append(((1.0 - beta) / (1.0 - math.pow(beta, n))))\n",
+    "    \n",
+    "    \n",
+    "    weight = torch.FloatTensor(weight)\n",
+    "    weight_dice = torch.FloatTensor(weight_dice)\n",
+    "    weight = weight.to(y_pred.device)\n",
+    "    weight_dice = weight_dice.to(y_pred.device)\n",
+    "\n",
+    "\n",
+    "    criterion_train = torch.nn.CrossEntropyLoss(weight=weight)\n",
+    "\n",
+    "    loss = criterion_train(y_pred.float(), temp.float())\n",
+    "\n",
+    "    return loss"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__CB_Loss__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "import numpy as np\n",
+    "\n",
+    "def cb_loss(y_pred, y_true, beta, confusion):\n",
+    "    weight = [((1.0 - beta) / (1.0 - math.pow(beta, i))) for i in confusion]\n",
+    "    criterion_train = torch.nn.CrossEntropyLoss(weight=torch.FloatTensor(weight))\n",
+    "    loss = criterion_train(y_pred.float(), y_true.long())\n",
+    "    return loss\n",
+    "\n",
+    "def train_for_cb_loss(model, optimizer)\n",
+    "    cls = []\n",
+    "    model.train()\n",
+    "    metric_logger = utils.MetricLogger(delimiter=\"  \") #delimiter-定界符\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
