--- a/NeuralNet_test/###TOPO_Post_Processing###/###3dunet###/train/train_04_11.ipynb
+++ b/NeuralNet_test/###TOPO_Post_Processing###/###3dunet###/train/train_04_11.ipynb
@@ -63,25 +63,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "40\n"
-     ]
-    }
-   ],
-   "source": [
-    "data_size = 45\n",
-    "train_size = int(data_size * 0.9)\n",
-    "print(train_size)"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -151,14 +132,14 @@
     "        self.conv = DoubleConv3d(in_channels, out_channels)\n",
     "\n",
     "    def forward(self, input, x):  #x是接收的从encoder传过来的融合数据\n",
-    "        #print('input',input.shape)\n",
-    "        #print('x',x.shape)\n",
-    "        x1 = self.up3d(input)\n",
-    "        #print('x1',x1.shape)\n",
+    "       \n",
+    "        x1 = self.up3d(input)     #x1是上采样后的数据\n",
+    "\n",
+    "        #特征融合部分\n",
     "        diffY = torch.tensor(x1.size()[3] - x.size()[3])\n",
-    "        diffX = torch.tensor(x1.size()[4] - x.size()[4])#特征融合部分\n",
+    "        diffX = torch.tensor(x1.size()[4] - x.size()[4])\n",
     "        diffZ = torch.tensor(x1.size()[2] - x.size()[2])\n",
-    "        #if x1.size()[3] > x.size()[3]:\n",
+    "        \n",
     "        x3 = F.pad(x, (diffX // 2, diffX - diffX // 2,\n",
     "                        diffY // 2, diffY - diffY // 2,\n",
     "                        diffZ // 2, diffZ - diffZ // 2))\n",
@@ -245,36 +226,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "epoch: 0\n",
-      "out1.shape: torch.Size([1, 64, 120, 120, 120])\n",
-      "out2.shape: torch.Size([1, 128, 60, 60, 60])\n",
-      "out3.shape: torch.Size([1, 256, 30, 30, 30])\n",
-      "out4.shape: torch.Size([1, 512, 15, 15, 15])\n",
-      "out5.shape: torch.Size([1, 256, 30, 30, 30])\n",
-      "out6.shape: torch.Size([1, 128, 60, 60, 60])\n",
-      "out7.shape: torch.Size([1, 64, 120, 120, 120])\n",
-      "logits.shape: torch.Size([1, 1, 120, 120, 120])\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'tensorboard'",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[20], line 61\u001b[0m\n\u001b[0;32m     58\u001b[0m net\u001b[39m.\u001b[39mto(device\u001b[39m=\u001b[39mdevice)\n\u001b[0;32m     60\u001b[0m data_path \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m../../../../Generate_dataset/Matlab_files/dataset/dataset/\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m---> 61\u001b[0m train_net(net, device, data_path)\n",
-      "Cell \u001b[1;32mIn[20], line 37\u001b[0m, in \u001b[0;36mtrain_net\u001b[1;34m(net, device, data_path, epochs, batch_size, lr)\u001b[0m\n\u001b[0;32m     34\u001b[0m writer\u001b[39m.\u001b[39madd_scalar(\u001b[39m'\u001b[39m\u001b[39mtrainloss\u001b[39m\u001b[39m'\u001b[39m,\u001b[39mfloat\u001b[39m(loss),epoch)\n\u001b[0;32m     35\u001b[0m writer\u001b[39m.\u001b[39mclose()\n\u001b[1;32m---> 37\u001b[0m loss\u001b[39m.\u001b[39;49mbackward()\n\u001b[0;32m     38\u001b[0m optimizer\u001b[39m.\u001b[39mstep()\n\u001b[0;32m     39\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mLoss/train\u001b[39m\u001b[39m'\u001b[39m, loss\u001b[39m.\u001b[39mitem())\n",
-      "File \u001b[1;32md:\\Anaconda3\\envs\\pytorch_cpu\\lib\\site-packages\\torch\\_tensor.py:488\u001b[0m, in \u001b[0;36mTensor.backward\u001b[1;34m(self, gradient, retain_graph, create_graph, inputs)\u001b[0m\n\u001b[0;32m    478\u001b[0m \u001b[39mif\u001b[39;00m has_torch_function_unary(\u001b[39mself\u001b[39m):\n\u001b[0;32m    479\u001b[0m     \u001b[39mreturn\u001b[39;00m handle_torch_function(\n\u001b[0;32m    480\u001b[0m         Tensor\u001b[39m.\u001b[39mbackward,\n\u001b[0;32m    481\u001b[0m         (\u001b[39mself\u001b[39m,),\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    486\u001b[0m         inputs\u001b[39m=\u001b[39minputs,\n\u001b[0;32m    487\u001b[0m     )\n\u001b[1;32m--> 488\u001b[0m torch\u001b[39m.\u001b[39;49mautograd\u001b[39m.\u001b[39;49mbackward(\n\u001b[0;32m    489\u001b[0m     \u001b[39mself\u001b[39;49m, gradient, retain_graph, create_graph, inputs\u001b[39m=\u001b[39;49minputs\n\u001b[0;32m    490\u001b[0m )\n",
-      "File \u001b[1;32md:\\Anaconda3\\envs\\pytorch_cpu\\lib\\site-packages\\torch\\autograd\\__init__.py:197\u001b[0m, in \u001b[0;36mbackward\u001b[1;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001b[0m\n\u001b[0;32m    192\u001b[0m     retain_graph \u001b[39m=\u001b[39m create_graph\n\u001b[0;32m    194\u001b[0m \u001b[39m# The reason we repeat same the comment below is that\u001b[39;00m\n\u001b[0;32m    195\u001b[0m \u001b[39m# some Python versions print out the first line of a multi-line function\u001b[39;00m\n\u001b[0;32m    196\u001b[0m \u001b[39m# calls in the traceback and some print out the last line\u001b[39;00m\n\u001b[1;32m--> 197\u001b[0m Variable\u001b[39m.\u001b[39;49m_execution_engine\u001b[39m.\u001b[39;49mrun_backward(  \u001b[39m# Calls into the C++ engine to run the backward pass\u001b[39;49;00m\n\u001b[0;32m    198\u001b[0m     tensors, grad_tensors_, retain_graph, create_graph, inputs,\n\u001b[0;32m    199\u001b[0m     allow_unreachable\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m, accumulate_grad\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m)\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtorch\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mtorch\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mutils\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mdata\u001b[39;00m \u001b[39mimport\u001b[39;00m Dataset, DataLoader\n\u001b[1;32m----> 5\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mtorch\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mutils\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mtensorboard\u001b[39;00m \u001b[39mimport\u001b[39;00m SummaryWriter\n\u001b[0;32m      6\u001b[0m writer \u001b[39m=\u001b[39m SummaryWriter(\u001b[39m'\u001b[39m\u001b[39m./loss\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m      8\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mtrain_net\u001b[39m(net, device, data_path, epochs\u001b[39m=\u001b[39m\u001b[39m100\u001b[39m, batch_size\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m, lr\u001b[39m=\u001b[39m\u001b[39m0.00001\u001b[39m):\n",
+      "File \u001b[1;32mc:\\Users\\WZY\\.conda\\envs\\pytorch_cpu\\lib\\site-packages\\torch\\utils\\tensorboard\\__init__.py:1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtensorboard\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mdistutils\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mversion\u001b[39;00m \u001b[39mimport\u001b[39;00m LooseVersion\n\u001b[0;32m      4\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mhasattr\u001b[39m(tensorboard, \u001b[39m\"\u001b[39m\u001b[39m__version__\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mor\u001b[39;00m LooseVersion(\n\u001b[0;32m      5\u001b[0m     tensorboard\u001b[39m.\u001b[39m__version__\n\u001b[0;32m      6\u001b[0m ) \u001b[39m<\u001b[39m LooseVersion(\u001b[39m\"\u001b[39m\u001b[39m1.15\u001b[39m\u001b[39m\"\u001b[39m):\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'tensorboard'"
      ]
     }
    ],
@@ -285,6 +249,40 @@
     "from torch.utils.data import Dataset, DataLoader\n",
     "from torch.utils.tensorboard import SummaryWriter\n",
     "writer = SummaryWriter('./loss')\n",
+    "\n",
+    "import torch\n",
+    "import math\n",
+    "\n",
+    "\n",
+    "def cb_loss(y_pred, y_true, temp, beta, confusion):\n",
+    "\n",
+    "    #计算每个类别对应的样本数\n",
+    "    confusion_ = [torch.sum(temp == i) for i in range(2)]   #统计一张label中每个类别的像素点\n",
+    "\n",
+    "    weight = []\n",
+    "    weight_dice = []\n",
+    "    for i, n in zip(confusion_, confusion):\n",
+    "        if i == 0:\n",
+    "            weight.append(0)\n",
+    "            weight_dice.append(1)\n",
+    "        else:\n",
+    "            weight_dice.append(1)\n",
+    "            weight.append(((1.0 - beta) / (1.0 - math.pow(beta, n))))\n",
+    "    \n",
+    "    \n",
+    "    weight = torch.FloatTensor(weight)\n",
+    "    weight_dice = torch.FloatTensor(weight_dice)\n",
+    "    weight = weight.to(y_pred.device)\n",
+    "    weight_dice = weight_dice.to(y_pred.device)\n",
+    "\n",
+    "\n",
+    "    criterion_train = torch.nn.CrossEntropyLoss(weight=weight)\n",
+    "\n",
+    "    loss = criterion_train(y_pred.float(), temp.float())\n",
+    "\n",
+    "    return loss\n",
+    "\n",
+    "\n",
     "\n",
     "def train_net(net, device, data_path, epochs=100, batch_size=1, lr=0.00001):\n",
     "    dataset = Generate_Dataset(data_path)\n",
@@ -297,7 +295,12 @@
     "    validate_loader = DataLoader(validate_dataset, batch_size=batch_size, shuffle=True)\n",
     "    \n",
     "    optimizer = optim.Adam(net.parameters(), lr=lr)\n",
-    "    criterion = nn.MSELoss()\n",
+    "\n",
+    "    #cb_loss\n",
+    "    cls = [79484028, 3972]       #[label_0, label_1]\n",
+    "\n",
+    "\n",
+    "    \n",
     "    best_loss = float('inf')\n",
     "\n",
     "    for epoch in range(epochs):\n",
@@ -311,7 +314,9 @@
     "            data = data.to(device=device, dtype=torch.float32)\n",
     "            label = label.to(device=device, dtype=torch.float32)\n",
     "            pred = net(data)\n",
-    "            loss = criterion(pred, label)\n",
+    "            temp = torch.argmax(pred, dim=1)\n",
+    "            loss = cb_loss(pred, label, temp, 0.9999, cls)\n",
+    "           \n",
     "            writer.add_scalar('trainloss',float(loss),epoch)\n",
     "            writer.close()\n",
     "\n",
@@ -405,7 +410,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python pytorch_cpu",
+   "display_name": "pytorch_cpu",
    "language": "python",
    "name": "pytorch_cpu"
   },
