--- a/NeuralNet_test/###TOPO_Post_Processing###/###3dunet###/train/test.ipynb
+++ b/NeuralNet_test/###TOPO_Post_Processing###/###3dunet###/train/test.ipynb
@@ -219,7 +219,7 @@
     "    def __init__(self, path):\n",
     "        self.path = path\n",
     "        self.data_path = glob.glob\\\n",
-    "            (os.path.join(path,'input/*.npy'))  #读取data文件夹下所有.npy格式文件\n",
+    "            (os.path.join(path,'/*.npy'))  #读取data文件夹下所有.npy格式文件\n",
     "\n",
     "    def __getitem__(self, index):\n",
     "        data_path = self.data_path[index]\n",
@@ -235,18 +235,8 @@
     "    def __len__(self):\n",
     "        return len(self.data_path)\n",
     "if __name__ == '__main__':\n",
-    "    dataset = Generate_Dataset('./dataset(05.09)/')\n",
+    "    dataset1 = Generate_Dataset('./dataset(positive_negative)/input/negative_input')\n",
     "    \n",
-    "    \n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
     "    # train_dataset, validate_dataset = torch.utils.data\\\n",
     "    #             .random_split(dataset, [train_size, validate_size])\n",
     "\n",
@@ -269,24 +259,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 44,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "expected str, bytes or os.PathLike object, not list",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[44], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mglob\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m data \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39;49mload(glob\u001b[39m.\u001b[39;49mglob(\u001b[39m'\u001b[39;49m\u001b[39m./dataset(05.09)/input/*.npy\u001b[39;49m\u001b[39m'\u001b[39;49m))\n\u001b[0;32m      4\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mlen\u001b[39m(data))\n",
-      "File \u001b[1;32mc:\\Users\\WZY\\.conda\\envs\\pytorch_cpu\\lib\\site-packages\\numpy\\lib\\npyio.py:417\u001b[0m, in \u001b[0;36mload\u001b[1;34m(file, mmap_mode, allow_pickle, fix_imports, encoding)\u001b[0m\n\u001b[0;32m    415\u001b[0m     own_fid \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m\n\u001b[0;32m    416\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m--> 417\u001b[0m     fid \u001b[39m=\u001b[39m stack\u001b[39m.\u001b[39menter_context(\u001b[39mopen\u001b[39m(os_fspath(file), \u001b[39m\"\u001b[39m\u001b[39mrb\u001b[39m\u001b[39m\"\u001b[39m))\n\u001b[0;32m    418\u001b[0m     own_fid \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n\u001b[0;32m    420\u001b[0m \u001b[39m# Code to distinguish from NumPy binary files and pickles.\u001b[39;00m\n",
-      "\u001b[1;31mTypeError\u001b[0m: expected str, bytes or os.PathLike object, not list"
-     ]
-    }
-   ],
-   "source": []
+   "source": [
+    "__保存positive_sample__"
+   ]
   },
   {
    "cell_type": "code",
@@ -647,6 +625,8 @@
     "print(dataindex)\n",
     "dataaddr = './dataset(05.09)/input/'\n",
     "inputsaveaddr = './dataset(positive_negative)/input/'\n",
+    "\n",
+    "#保存positive_sample\n",
     "for i in range(len(dataindex)):\n",
     "    # print(i)\n",
     "    index = dataindex[i]\n",
@@ -657,7 +637,89 @@
     "    labeladdr = dataaddr.replace('input/','label/')\n",
     "    labeldata = np.load(os.path.join(labeladdr, str(index)+'.npy'))\n",
     "    labelsaveaddr = inputsaveaddr.replace('input/','label/')\n",
-    "    np.save(os.path.join(labelsaveaddr,'positive_label/'+str(index)+'.npy'),labeldata)"
+    "    np.save(os.path.join(labelsaveaddr,'positive_label/'+str(index)+'.npy'),labeldata)\n",
+    "\n",
+    "    #保存negative_sample\n",
+    "    negativesample_index = np.\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__保存negative_sample__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  81   87   92   93  117  123  128  129  303  308  309  339  344  345\n",
+      "  524  525  531  560  561  567  735  740  741  771  776  777  951  956\n",
+      "  957  987  992  993 1172 1173 1179 1208 1209 1215 1383 1388 1389 1419\n",
+      " 1424 1425 1599 1604 1605 1635 1640 1641 1820 1821 1827 1856 1857 1863\n",
+      " 2024 2025 2030 2031 2037 2060 2061 2066 2067 2072 2073 2079 2247 2252\n",
+      " 2253 2259 2283 2288 2289 2295 2457 2462 2463 2468 2469 2475 2493 2498\n",
+      " 2499 2504 2505 2511 2673 2678 2679 2685 2709 2714 2715 2720 2721 2727\n",
+      " 2895 2900 2901 2907 2931 2936 2937 2943 3111 3117 3123 3153 3326 3333\n",
+      " 3338 3339 3345 3362 3374 3375 3381 3542 3549 3554 3555 3561 3578 3590\n",
+      " 3591 3597 3759 3765 3771 3801 3968 3969 3986 3987 3992 3993 4004 4005\n",
+      " 4022 4023 4028 4029 4190 4197 4202 4203 4209 4226 4238 4239 4245 4407\n",
+      " 4413 4419 4449 4622 4625 4628 4631 4658 4661 4662 4664 4667 4668 4839\n",
+      " 4844 4875 4880 5054 5055 5060 5061 5090 5091 5096 5097 5264 5270 5271\n",
+      " 5300 5306 5307 5487 5492 5523 5528 5702 5703 5709 5738 5739 5745 5912\n",
+      " 5918 5919 5924 5948 5954 5955 5960 6128 6134 6135 6140 6141 6164 6170\n",
+      " 6171 6176 6177 6344 6350 6351 6356 6357 6380 6386 6387 6392 6393 6566\n",
+      " 6602 6776 6782 6783 6788 6812 6818 6819 6824 6999 7004 7035 7040 7214\n",
+      " 7215 7250 7251 7430 7431 7466 7467 7647 7652 7683 7688 7863 7899 8078\n",
+      " 8079 8114 8115 8295 8300 8331 8336 8504 8505 8510 8511 8517 8540 8541\n",
+      " 8546 8547 8553 8726 8727 8732 8733 8762 8763 8768 8769 8942 8943 8948\n",
+      " 8949 8978 8979 8984 8985 9158 9159 9164 9165 9194 9195 9200 9201 9374\n",
+      " 9375 9380 9381 9410 9411 9416 9417 9590 9591 9596 9597 9626 9627 9632\n",
+      " 9633 9806 9807 9812 9813 9842 9843 9848 9849]\n",
+      "一共： 9618 个negative_sample!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import os\n",
+    "#生成寻址标签\n",
+    "np.set_printoptions(threshold=np.inf)\n",
+    "dataindex = np.arange(0,9936)\n",
+    "# print(data)\n",
+    "positivedataindex = np.load('./dataset(05.09)/nozerolabelindex.npy')\n",
+    "print(positivedataindex)\n",
+    "for i in range(positivedataindex.shape[0]):\n",
+    "    temp_value = positivedataindex[i]\n",
+    "    dataindex[temp_value] = 0\n",
+    "\n",
+    "#保存negative_sample\n",
+    "inputindex = './dataset(05.09)/input/'\n",
+    "inputsaveaddr = './dataset(positive_negative)/input/'\n",
+    "num = 0\n",
+    "for t in range(len(dataindex)):\n",
+    "    temp = dataindex[t]\n",
+    "    if temp == 0:\n",
+    "        continue\n",
+    "    else:\n",
+    "        inputdata = np.load(os.path.join(inputindex,str(temp)+'.npy'))\n",
+    "        num += 1\n",
+    "        np.save(os.path.join(inputsaveaddr,'negative_input/'+str(temp)+'.npy'), inputdata)\n",
+    "        labelindex = inputindex.replace('input/','label/')\n",
+    "        labeldata = np.load(os.path.join(labelindex,str(temp)+'.npy'))\n",
+    "        labelsaveaddr = inputsaveaddr.replace('input/', 'label/')\n",
+    "        np.save(os.path.join(labelsaveaddr, 'negative_label/'+str(temp)+'.npy'), labeldata)\n",
+    "\n",
+    "print('一共：',num, '个negative_sample!')\n",
+    "\n",
+    "\n"
    ]
   }
  ],
