将训练代码和数据集整合到Jupyter_Code中
Signed-off-by: WZY-Desktop <wzz12135@gmail.com>

--- a/Generate_dataset/Jupyter_Code/Code/test_v2.ipynb
+++ b/Generate_dataset/Jupyter_Code/Code/test_v2.ipynb
@@ -205,9 +205,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n",
+      "0\n",
+      "0\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "num_samples should be a positive integer value, but got num_samples=0",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 39\u001b[0m\n\u001b[0;32m     35\u001b[0m train_dataset, validate_dataset \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mutils\u001b[39m.\u001b[39mdata\\\n\u001b[0;32m     36\u001b[0m             \u001b[39m.\u001b[39mrandom_split(dataset, [train_size, validate_size])\n\u001b[0;32m     38\u001b[0m \u001b[39m#print(\"读入数据个数为：\", len(top_dataset))\u001b[39;00m\n\u001b[1;32m---> 39\u001b[0m train_loader \u001b[39m=\u001b[39m DataLoader(train_dataset, batch_size\u001b[39m=\u001b[39;49m\u001b[39m1\u001b[39;49m, shuffle\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m)\n\u001b[0;32m     40\u001b[0m validate_loader \u001b[39m=\u001b[39m DataLoader(validate_dataset, batch_size\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m, shuffle\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[0;32m     41\u001b[0m t \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n",
+      "File \u001b[1;32mc:\\Users\\WZY\\.conda\\envs\\pytorch_cpu\\lib\\site-packages\\torch\\utils\\data\\dataloader.py:351\u001b[0m, in \u001b[0;36mDataLoader.__init__\u001b[1;34m(self, dataset, batch_size, shuffle, sampler, batch_sampler, num_workers, collate_fn, pin_memory, drop_last, timeout, worker_init_fn, multiprocessing_context, generator, prefetch_factor, persistent_workers, pin_memory_device)\u001b[0m\n\u001b[0;32m    349\u001b[0m \u001b[39melse\u001b[39;00m:  \u001b[39m# map-style\u001b[39;00m\n\u001b[0;32m    350\u001b[0m     \u001b[39mif\u001b[39;00m shuffle:\n\u001b[1;32m--> 351\u001b[0m         sampler \u001b[39m=\u001b[39m RandomSampler(dataset, generator\u001b[39m=\u001b[39;49mgenerator)  \u001b[39m# type: ignore[arg-type]\u001b[39;00m\n\u001b[0;32m    352\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[0;32m    353\u001b[0m         sampler \u001b[39m=\u001b[39m SequentialSampler(dataset)  \u001b[39m# type: ignore[arg-type]\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\WZY\\.conda\\envs\\pytorch_cpu\\lib\\site-packages\\torch\\utils\\data\\sampler.py:107\u001b[0m, in \u001b[0;36mRandomSampler.__init__\u001b[1;34m(self, data_source, replacement, num_samples, generator)\u001b[0m\n\u001b[0;32m    103\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mTypeError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mreplacement should be a boolean value, but got \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    104\u001b[0m                     \u001b[39m\"\u001b[39m\u001b[39mreplacement=\u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mreplacement))\n\u001b[0;32m    106\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39misinstance\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mnum_samples, \u001b[39mint\u001b[39m) \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mnum_samples \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m--> 107\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mnum_samples should be a positive integer \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    108\u001b[0m                      \u001b[39m\"\u001b[39m\u001b[39mvalue, but got num_samples=\u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mnum_samples))\n",
+      "\u001b[1;31mValueError\u001b[0m: num_samples should be a positive integer value, but got num_samples=0"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import glob\n",
@@ -226,7 +249,7 @@
     "        data = np.load(data_path)      #读取输入数据\n",
     "        tensor_data = torch.from_numpy(data)\n",
     "        \n",
-    "        label_path = data_path.replace('input', 'label')\n",
+    "        label_path = data_path.replace('input/negative_input', 'label/negative_label')\n",
     "        label = np.load(label_path)    #读取标签数据\n",
     "        tensor_label = torch.from_numpy(label)\n",
     "\n",
@@ -234,28 +257,34 @@
     "\n",
     "    def __len__(self):\n",
     "        return len(self.data_path)\n",
-    "if __name__ == '__main__':\n",
-    "    dataset1 = Generate_Dataset('./dataset(positive_negative)/input/negative_input')\n",
-    "    \n",
-    "    # train_dataset, validate_dataset = torch.utils.data\\\n",
-    "    #             .random_split(dataset, [train_size, validate_size])\n",
     "\n",
-    "    # #print(\"读入数据个数为：\", len(top_dataset))\n",
-    "    # train_loader = DataLoader(train_dataset, batch_size=50, shuffle=True)\n",
-    "    # validate_loader = DataLoader(validate_dataset, batch_size=50, shuffle=True)\n",
-    "    # t = 0\n",
-    "    # for train, label in train_loader:\n",
-    "    #     t += 1\n",
-    "    #     print(train.shape)\n",
-    "    #     print(label.shape)\n",
-    "    # print('共有',t,'个训练集')\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    dataset = Generate_Dataset('./dataset(positive_negative)/input/negative_input')\n",
+    "    print(list(dataset))\n",
+    "    train_size = int(len(dataset) * 0.9)\n",
+    "    print(train_size)\n",
+    "    validate_size = int(len(dataset) - train_size)\n",
+    "    print(validate_size)\n",
+    "    train_dataset, validate_dataset = torch.utils.data\\\n",
+    "                .random_split(dataset, [train_size, validate_size])\n",
+    "\n",
+    "    #print(\"读入数据个数为：\", len(top_dataset))\n",
+    "    train_loader = DataLoader(train_dataset, batch_size=1, shuffle=True)\n",
+    "    validate_loader = DataLoader(validate_dataset, batch_size=1, shuffle=True)\n",
+    "    t = 0\n",
+    "    for train, label in train_loader:\n",
+    "        t += 1\n",
+    "        print(train.shape)\n",
+    "        print(label.shape)\n",
+    "    print('共有',t,'个训练集')\n",
     "    \n",
-    "    # n = 0\n",
-    "    # for validate, label in validate_loader:\n",
-    "    #     n += 1\n",
-    "    #     print(validate.shape)\n",
-    "    #     print(label.shape)\n",
-    "    # print('共有',n,'个训练集')"
+    "    n = 0\n",
+    "    for validate, label in validate_loader:\n",
+    "        n += 1\n",
+    "        print(validate.shape)\n",
+    "        print(label.shape)\n",
+    "    print('共有',n,'个训练集')"
    ]
   },
   {
