--- a/Generate_dataset/Jupyter_Code/Code/train_04_11.ipynb
+++ b/Generate_dataset/Jupyter_Code/Code/train_04_11.ipynb
@@ -75,303 +75,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "************************读入negative_sample***********************\n",
       "negative_train_size: 6733\n",
       "negative_validate_size: 2886\n",
       "读入数据个数为： 6733\n",
-      "共有 6733 个训练集\n",
-      "共有 2886 个训练集\n",
-      "******************************分割线******************************\n",
+      "*****************************读入完毕！****************************\n",
+      "\n",
+      "\n",
+      "************************读入positive_sample***********************\n",
       "positive_train_size: 222\n",
       "positive_validate_size: 95\n",
       "读入数据个数为： 222\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([50, 1, 20, 20, 20])\n",
-      "torch.Size([5, 1, 20, 20, 20])\n",
-      "torch.Size([5, 1, 20, 20, 20])\n",
-      "140\n"
+      "*****************************读入完毕！****************************\n",
+      "\n",
+      "\n",
+      "*************************开始加载正式数据集*************************\n",
+      "测试集一共划分为： 140 个批次\n",
+      "验证集一共划分为： 60 个批次\n",
+      "*************************正式数据集加载完毕*************************\n"
      ]
     }
    ],
@@ -430,7 +158,8 @@
     "\n",
     "    #************************************************************************************************\n",
     "    #读取并载入negative_dataset\n",
-    "    dataset1 = Generate_Dataset1('./dataset(positive_negative)/input/')\n",
+    "    print('************************读入negative_sample***********************')\n",
+    "    dataset1 = Generate_Dataset1('../Data/dataset(positive_negative)/input/')\n",
     "    negative_train_size = int(len(dataset1) * 0.7)\n",
     "    print('negative_train_size:', negative_train_size)\n",
     "    negative_validate_size = int(len(dataset1) - negative_train_size)\n",
@@ -440,27 +169,34 @@
     "                .random_split(dataset1, [negative_train_size, negative_validate_size])\n",
     "\n",
     "    print(\"读入数据个数为：\", len(negative_train_dataset))\n",
+    "    print('*****************************读入完毕！****************************')\n",
+    "    print('\\n')\n",
     "    train_loader = DataLoader(negative_train_dataset, batch_size=1, shuffle=True)\n",
     "    validate_loader = DataLoader(negative_validate_dataset, batch_size=1, shuffle=True)\n",
-    "    t = 0\n",
-    "    for negative_train, negative_label in train_loader:\n",
-    "        t += 1\n",
-    "        # print(negative_train.shape)\n",
-    "        # print(negative_label.shape)\n",
-    "    print('共有',t,'个训练集')\n",
     "    \n",
-    "    n = 0\n",
-    "    for negative_validate, negative_label in validate_loader:\n",
-    "        n += 1\n",
-    "        # print(negative_validate.shape)\n",
-    "        # print(negative_label.shape)\n",
-    "    print('共有',n,'个训练集')\n",
-    "    print('******************************分割线******************************')\n",
+    "    # t = 0\n",
+    "    # for negative_train, negative_label in train_loader:\n",
+    "    #     t += 1\n",
+    "    #     print(negative_train.shape)\n",
+    "    #     print(negative_label.shape)\n",
+    "    # print('共有',t,'个训练集')\n",
+    "    \n",
+    "    # n = 0\n",
+    "    # for negative_validate, negative_label in validate_loader:\n",
+    "    #     n += 1\n",
+    "    #     print(negative_validate.shape)\n",
+    "    #     print(negative_label.shape)\n",
+    "    # print('共有',n,'个训练集')\n",
+    "\n",
+    "\n",
+    "\n",
+    "    # print('******************************分割线******************************')\n",
     "\n",
     "\n",
     "    #************************************************************************************************\n",
     "    #读取并载入positive_dataset\n",
-    "    dataset2 = Generate_Dataset2('./dataset(positive_negative)/input/')\n",
+    "    print('************************读入positive_sample***********************')\n",
+    "    dataset2 = Generate_Dataset2('../Data/dataset(positive_negative)/input/')\n",
     "    positive_train_size = int(len(dataset2) * 0.7) + 1\n",
     "    print('positive_train_size:',positive_train_size)\n",
     "    positive_validate_size = int(len(dataset2) - positive_train_size)\n",
@@ -469,25 +205,32 @@
     "                .random_split(dataset2, [positive_train_size, positive_validate_size])\n",
     "\n",
     "    print(\"读入数据个数为：\", len(positive_train_dataset))\n",
+    "    print('*****************************读入完毕！****************************')\n",
     "    train_loader = DataLoader(positive_train_dataset, batch_size=1, shuffle=True)\n",
     "    validate_loader = DataLoader(positive_validate_dataset, batch_size=1, shuffle=True)\n",
-    "    t = 0\n",
-    "    for positive_train, positive_label in train_loader:\n",
-    "        t += 1\n",
-    "        # print(positive_train.shape)\n",
-    "        # print(positive_label.shape)\n",
-    "    # print('共有',t,'个训练集')\n",
     "    \n",
-    "    n = 0\n",
-    "    for positive_validate, positive_label in validate_loader:\n",
-    "        n += 1\n",
-    "        # print(positive_validate.shape)\n",
-    "        # print(positive_label.shape)\n",
-    "    # print('共有',n,'个训练集')\n",
-    "\n",
-    "\n",
+    "    \n",
+    "    \n",
+    "    # t = 0\n",
+    "    # for positive_train, positive_label in train_loader:\n",
+    "    #     t += 1\n",
+    "    #     # print(positive_train.shape)\n",
+    "    #     # print(positive_label.shape)\n",
+    "    # # print('共有',t,'个训练集')\n",
+    "    \n",
+    "    # n = 0\n",
+    "    # for positive_validate, positive_label in validate_loader:\n",
+    "    #     n += 1\n",
+    "    #     # print(positive_validate.shape)\n",
+    "    #     # print(positive_label.shape)\n",
+    "    # # print('共有',n,'个训练集')\n",
+    "    print('\\n')\n",
+    "    print('*************************开始加载正式数据集*************************')\n",
     "    train_dataset = torch.utils.data.ConcatDataset([negative_train_dataset, positive_train_dataset])\n",
     "    validate_dataset = torch.utils.data.ConcatDataset([negative_validate_dataset, positive_validate_dataset])\n",
+    "    \n",
+    "    \n",
+    "    \n",
     "    # print(len(train_dataset))\n",
     "    # print(len(validate_dataset))\n",
     "    # print(list(train_dataset))\n",
@@ -499,15 +242,22 @@
     "    #     # print(label)\n",
     "    #     print('一共',m,'个数据')\n",
     "\n",
-    "\n",
+    "    \n",
     "    traindata_Loader = DataLoader(train_dataset, batch_size = 50, shuffle=True)\n",
     "    validatedata_Loader = DataLoader(validate_dataset, batch_size = 50, shuffle=True)\n",
     "    q = 0\n",
     "    for train, label in traindata_Loader:\n",
-    "        print(train.shape)\n",
-    "        print(label.shape)\n",
+    "        # print(train.shape)\n",
+    "        # print(label.shape)\n",
     "        q += 1\n",
-    "    print(q)"
+    "    print('测试集一共划分为：',q,'个批次')\n",
+    "    p = 0\n",
+    "    for validate, label in validatedata_Loader:\n",
+    "        # print(validate.shape)\n",
+    "        # print(label.shape)\n",
+    "        p += 1\n",
+    "    print('验证集一共划分为：',p,'个批次')\n",
+    "    print('*************************正式数据集加载完毕*************************')"
    ]
   },
   {
