--- a/Generate_dataset/Jupyter_Code/Code/test_v2.ipynb
+++ b/Generate_dataset/Jupyter_Code/Code/test_v2.ipynb
@@ -128,19 +128,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "\n",
-    "data = np.load('./dataset(05.09)/nozerolabelindex.npy')\n",
-    "print(data)\n",
-    "print(len(data))"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -179,115 +166,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import math\n",
-    "batch_size = 50\n",
-    "\n",
-    "possive_sample_size = int(batch_size * 0.5)\n",
-    "negative_sample_size = batch_size - possive_sample_size\n",
-    "print(possive_sample_size)\n",
-    "print(negative_sample_size)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_path = './dataset(05.09)/'\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[]\n",
-      "0\n",
-      "0\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "num_samples should be a positive integer value, but got num_samples=0",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 39\u001b[0m\n\u001b[0;32m     35\u001b[0m train_dataset, validate_dataset \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mutils\u001b[39m.\u001b[39mdata\\\n\u001b[0;32m     36\u001b[0m             \u001b[39m.\u001b[39mrandom_split(dataset, [train_size, validate_size])\n\u001b[0;32m     38\u001b[0m \u001b[39m#print(\"读入数据个数为：\", len(top_dataset))\u001b[39;00m\n\u001b[1;32m---> 39\u001b[0m train_loader \u001b[39m=\u001b[39m DataLoader(train_dataset, batch_size\u001b[39m=\u001b[39;49m\u001b[39m1\u001b[39;49m, shuffle\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m)\n\u001b[0;32m     40\u001b[0m validate_loader \u001b[39m=\u001b[39m DataLoader(validate_dataset, batch_size\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m, shuffle\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[0;32m     41\u001b[0m t \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n",
-      "File \u001b[1;32mc:\\Users\\WZY\\.conda\\envs\\pytorch_cpu\\lib\\site-packages\\torch\\utils\\data\\dataloader.py:351\u001b[0m, in \u001b[0;36mDataLoader.__init__\u001b[1;34m(self, dataset, batch_size, shuffle, sampler, batch_sampler, num_workers, collate_fn, pin_memory, drop_last, timeout, worker_init_fn, multiprocessing_context, generator, prefetch_factor, persistent_workers, pin_memory_device)\u001b[0m\n\u001b[0;32m    349\u001b[0m \u001b[39melse\u001b[39;00m:  \u001b[39m# map-style\u001b[39;00m\n\u001b[0;32m    350\u001b[0m     \u001b[39mif\u001b[39;00m shuffle:\n\u001b[1;32m--> 351\u001b[0m         sampler \u001b[39m=\u001b[39m RandomSampler(dataset, generator\u001b[39m=\u001b[39;49mgenerator)  \u001b[39m# type: ignore[arg-type]\u001b[39;00m\n\u001b[0;32m    352\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[0;32m    353\u001b[0m         sampler \u001b[39m=\u001b[39m SequentialSampler(dataset)  \u001b[39m# type: ignore[arg-type]\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\WZY\\.conda\\envs\\pytorch_cpu\\lib\\site-packages\\torch\\utils\\data\\sampler.py:107\u001b[0m, in \u001b[0;36mRandomSampler.__init__\u001b[1;34m(self, data_source, replacement, num_samples, generator)\u001b[0m\n\u001b[0;32m    103\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mTypeError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mreplacement should be a boolean value, but got \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    104\u001b[0m                     \u001b[39m\"\u001b[39m\u001b[39mreplacement=\u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mreplacement))\n\u001b[0;32m    106\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39misinstance\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mnum_samples, \u001b[39mint\u001b[39m) \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mnum_samples \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m--> 107\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mnum_samples should be a positive integer \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    108\u001b[0m                      \u001b[39m\"\u001b[39m\u001b[39mvalue, but got num_samples=\u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mnum_samples))\n",
-      "\u001b[1;31mValueError\u001b[0m: num_samples should be a positive integer value, but got num_samples=0"
-     ]
-    }
-   ],
-   "source": [
-    "import os\n",
-    "import glob\n",
-    "import torch\n",
-    "from torch.utils.data import Dataset, DataLoader\n",
-    "import numpy as np\n",
-    "\n",
-    "class Generate_Dataset(Dataset):\n",
-    "    def __init__(self, path):\n",
-    "        self.path = path\n",
-    "        self.data_path = glob.glob\\\n",
-    "            (os.path.join(path,'/*.npy'))  #读取data文件夹下所有.npy格式文件\n",
-    "\n",
-    "    def __getitem__(self, index):\n",
-    "        data_path = self.data_path[index]\n",
-    "        data = np.load(data_path)      #读取输入数据\n",
-    "        tensor_data = torch.from_numpy(data)\n",
-    "        \n",
-    "        label_path = data_path.replace('input/negative_input', 'label/negative_label')\n",
-    "        label = np.load(label_path)    #读取标签数据\n",
-    "        tensor_label = torch.from_numpy(label)\n",
-    "\n",
-    "        return tensor_data, tensor_label\n",
-    "\n",
-    "    def __len__(self):\n",
-    "        return len(self.data_path)\n",
-    "\n",
-    "\n",
-    "if __name__ == '__main__':\n",
-    "    dataset = Generate_Dataset('./dataset(positive_negative)/input/negative_input')\n",
-    "    print(list(dataset))\n",
-    "    train_size = int(len(dataset) * 0.9)\n",
-    "    print(train_size)\n",
-    "    validate_size = int(len(dataset) - train_size)\n",
-    "    print(validate_size)\n",
-    "    train_dataset, validate_dataset = torch.utils.data\\\n",
-    "                .random_split(dataset, [train_size, validate_size])\n",
-    "\n",
-    "    #print(\"读入数据个数为：\", len(top_dataset))\n",
-    "    train_loader = DataLoader(train_dataset, batch_size=1, shuffle=True)\n",
-    "    validate_loader = DataLoader(validate_dataset, batch_size=1, shuffle=True)\n",
-    "    t = 0\n",
-    "    for train, label in train_loader:\n",
-    "        t += 1\n",
-    "        print(train.shape)\n",
-    "        print(label.shape)\n",
-    "    print('共有',t,'个训练集')\n",
-    "    \n",
-    "    n = 0\n",
-    "    for validate, label in validate_loader:\n",
-    "        n += 1\n",
-    "        print(validate.shape)\n",
-    "        print(label.shape)\n",
-    "    print('共有',n,'个训练集')"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -297,356 +175,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[  81   87   92   93  117  123  128  129  303  308  309  339  344  345\n",
-      "  524  525  531  560  561  567  735  740  741  771  776  777  951  956\n",
-      "  957  987  992  993 1172 1173 1179 1208 1209 1215 1383 1388 1389 1419\n",
-      " 1424 1425 1599 1604 1605 1635 1640 1641 1820 1821 1827 1856 1857 1863\n",
-      " 2024 2025 2030 2031 2037 2060 2061 2066 2067 2072 2073 2079 2247 2252\n",
-      " 2253 2259 2283 2288 2289 2295 2457 2462 2463 2468 2469 2475 2493 2498\n",
-      " 2499 2504 2505 2511 2673 2678 2679 2685 2709 2714 2715 2720 2721 2727\n",
-      " 2895 2900 2901 2907 2931 2936 2937 2943 3111 3117 3123 3153 3326 3333\n",
-      " 3338 3339 3345 3362 3374 3375 3381 3542 3549 3554 3555 3561 3578 3590\n",
-      " 3591 3597 3759 3765 3771 3801 3968 3969 3986 3987 3992 3993 4004 4005\n",
-      " 4022 4023 4028 4029 4190 4197 4202 4203 4209 4226 4238 4239 4245 4407\n",
-      " 4413 4419 4449 4622 4625 4628 4631 4658 4661 4662 4664 4667 4668 4839\n",
-      " 4844 4875 4880 5054 5055 5060 5061 5090 5091 5096 5097 5264 5270 5271\n",
-      " 5300 5306 5307 5487 5492 5523 5528 5702 5703 5709 5738 5739 5745 5912\n",
-      " 5918 5919 5924 5948 5954 5955 5960 6128 6134 6135 6140 6141 6164 6170\n",
-      " 6171 6176 6177 6344 6350 6351 6356 6357 6380 6386 6387 6392 6393 6566\n",
-      " 6602 6776 6782 6783 6788 6812 6818 6819 6824 6999 7004 7035 7040 7214\n",
-      " 7215 7250 7251 7430 7431 7466 7467 7647 7652 7683 7688 7863 7899 8078\n",
-      " 8079 8114 8115 8295 8300 8331 8336 8504 8505 8510 8511 8517 8540 8541\n",
-      " 8546 8547 8553 8726 8727 8732 8733 8762 8763 8768 8769 8942 8943 8948\n",
-      " 8949 8978 8979 8984 8985 9158 9159 9164 9165 9194 9195 9200 9201 9374\n",
-      " 9375 9380 9381 9410 9411 9416 9417 9590 9591 9596 9597 9626 9627 9632\n",
-      " 9633 9806 9807 9812 9813 9842 9843 9848 9849]\n",
-      "81\n",
-      "87\n",
-      "92\n",
-      "93\n",
-      "117\n",
-      "123\n",
-      "128\n",
-      "129\n",
-      "303\n",
-      "308\n",
-      "309\n",
-      "339\n",
-      "344\n",
-      "345\n",
-      "524\n",
-      "525\n",
-      "531\n",
-      "560\n",
-      "561\n",
-      "567\n",
-      "735\n",
-      "740\n",
-      "741\n",
-      "771\n",
-      "776\n",
-      "777\n",
-      "951\n",
-      "956\n",
-      "957\n",
-      "987\n",
-      "992\n",
-      "993\n",
-      "1172\n",
-      "1173\n",
-      "1179\n",
-      "1208\n",
-      "1209\n",
-      "1215\n",
-      "1383\n",
-      "1388\n",
-      "1389\n",
-      "1419\n",
-      "1424\n",
-      "1425\n",
-      "1599\n",
-      "1604\n",
-      "1605\n",
-      "1635\n",
-      "1640\n",
-      "1641\n",
-      "1820\n",
-      "1821\n",
-      "1827\n",
-      "1856\n",
-      "1857\n",
-      "1863\n",
-      "2024\n",
-      "2025\n",
-      "2030\n",
-      "2031\n",
-      "2037\n",
-      "2060\n",
-      "2061\n",
-      "2066\n",
-      "2067\n",
-      "2072\n",
-      "2073\n",
-      "2079\n",
-      "2247\n",
-      "2252\n",
-      "2253\n",
-      "2259\n",
-      "2283\n",
-      "2288\n",
-      "2289\n",
-      "2295\n",
-      "2457\n",
-      "2462\n",
-      "2463\n",
-      "2468\n",
-      "2469\n",
-      "2475\n",
-      "2493\n",
-      "2498\n",
-      "2499\n",
-      "2504\n",
-      "2505\n",
-      "2511\n",
-      "2673\n",
-      "2678\n",
-      "2679\n",
-      "2685\n",
-      "2709\n",
-      "2714\n",
-      "2715\n",
-      "2720\n",
-      "2721\n",
-      "2727\n",
-      "2895\n",
-      "2900\n",
-      "2901\n",
-      "2907\n",
-      "2931\n",
-      "2936\n",
-      "2937\n",
-      "2943\n",
-      "3111\n",
-      "3117\n",
-      "3123\n",
-      "3153\n",
-      "3326\n",
-      "3333\n",
-      "3338\n",
-      "3339\n",
-      "3345\n",
-      "3362\n",
-      "3374\n",
-      "3375\n",
-      "3381\n",
-      "3542\n",
-      "3549\n",
-      "3554\n",
-      "3555\n",
-      "3561\n",
-      "3578\n",
-      "3590\n",
-      "3591\n",
-      "3597\n",
-      "3759\n",
-      "3765\n",
-      "3771\n",
-      "3801\n",
-      "3968\n",
-      "3969\n",
-      "3986\n",
-      "3987\n",
-      "3992\n",
-      "3993\n",
-      "4004\n",
-      "4005\n",
-      "4022\n",
-      "4023\n",
-      "4028\n",
-      "4029\n",
-      "4190\n",
-      "4197\n",
-      "4202\n",
-      "4203\n",
-      "4209\n",
-      "4226\n",
-      "4238\n",
-      "4239\n",
-      "4245\n",
-      "4407\n",
-      "4413\n",
-      "4419\n",
-      "4449\n",
-      "4622\n",
-      "4625\n",
-      "4628\n",
-      "4631\n",
-      "4658\n",
-      "4661\n",
-      "4662\n",
-      "4664\n",
-      "4667\n",
-      "4668\n",
-      "4839\n",
-      "4844\n",
-      "4875\n",
-      "4880\n",
-      "5054\n",
-      "5055\n",
-      "5060\n",
-      "5061\n",
-      "5090\n",
-      "5091\n",
-      "5096\n",
-      "5097\n",
-      "5264\n",
-      "5270\n",
-      "5271\n",
-      "5300\n",
-      "5306\n",
-      "5307\n",
-      "5487\n",
-      "5492\n",
-      "5523\n",
-      "5528\n",
-      "5702\n",
-      "5703\n",
-      "5709\n",
-      "5738\n",
-      "5739\n",
-      "5745\n",
-      "5912\n",
-      "5918\n",
-      "5919\n",
-      "5924\n",
-      "5948\n",
-      "5954\n",
-      "5955\n",
-      "5960\n",
-      "6128\n",
-      "6134\n",
-      "6135\n",
-      "6140\n",
-      "6141\n",
-      "6164\n",
-      "6170\n",
-      "6171\n",
-      "6176\n",
-      "6177\n",
-      "6344\n",
-      "6350\n",
-      "6351\n",
-      "6356\n",
-      "6357\n",
-      "6380\n",
-      "6386\n",
-      "6387\n",
-      "6392\n",
-      "6393\n",
-      "6566\n",
-      "6602\n",
-      "6776\n",
-      "6782\n",
-      "6783\n",
-      "6788\n",
-      "6812\n",
-      "6818\n",
-      "6819\n",
-      "6824\n",
-      "6999\n",
-      "7004\n",
-      "7035\n",
-      "7040\n",
-      "7214\n",
-      "7215\n",
-      "7250\n",
-      "7251\n",
-      "7430\n",
-      "7431\n",
-      "7466\n",
-      "7467\n",
-      "7647\n",
-      "7652\n",
-      "7683\n",
-      "7688\n",
-      "7863\n",
-      "7899\n",
-      "8078\n",
-      "8079\n",
-      "8114\n",
-      "8115\n",
-      "8295\n",
-      "8300\n",
-      "8331\n",
-      "8336\n",
-      "8504\n",
-      "8505\n",
-      "8510\n",
-      "8511\n",
-      "8517\n",
-      "8540\n",
-      "8541\n",
-      "8546\n",
-      "8547\n",
-      "8553\n",
-      "8726\n",
-      "8727\n",
-      "8732\n",
-      "8733\n",
-      "8762\n",
-      "8763\n",
-      "8768\n",
-      "8769\n",
-      "8942\n",
-      "8943\n",
-      "8948\n",
-      "8949\n",
-      "8978\n",
-      "8979\n",
-      "8984\n",
-      "8985\n",
-      "9158\n",
-      "9159\n",
-      "9164\n",
-      "9165\n",
-      "9194\n",
-      "9195\n",
-      "9200\n",
-      "9201\n",
-      "9374\n",
-      "9375\n",
-      "9380\n",
-      "9381\n",
-      "9410\n",
-      "9411\n",
-      "9416\n",
-      "9417\n",
-      "9590\n",
-      "9591\n",
-      "9596\n",
-      "9597\n",
-      "9626\n",
-      "9627\n",
-      "9632\n",
-      "9633\n",
-      "9806\n",
-      "9807\n",
-      "9812\n",
-      "9813\n",
-      "9842\n",
-      "9843\n",
-      "9848\n",
-      "9849\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import os\n",
@@ -682,40 +213,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[  81   87   92   93  117  123  128  129  303  308  309  339  344  345\n",
-      "  524  525  531  560  561  567  735  740  741  771  776  777  951  956\n",
-      "  957  987  992  993 1172 1173 1179 1208 1209 1215 1383 1388 1389 1419\n",
-      " 1424 1425 1599 1604 1605 1635 1640 1641 1820 1821 1827 1856 1857 1863\n",
-      " 2024 2025 2030 2031 2037 2060 2061 2066 2067 2072 2073 2079 2247 2252\n",
-      " 2253 2259 2283 2288 2289 2295 2457 2462 2463 2468 2469 2475 2493 2498\n",
-      " 2499 2504 2505 2511 2673 2678 2679 2685 2709 2714 2715 2720 2721 2727\n",
-      " 2895 2900 2901 2907 2931 2936 2937 2943 3111 3117 3123 3153 3326 3333\n",
-      " 3338 3339 3345 3362 3374 3375 3381 3542 3549 3554 3555 3561 3578 3590\n",
-      " 3591 3597 3759 3765 3771 3801 3968 3969 3986 3987 3992 3993 4004 4005\n",
-      " 4022 4023 4028 4029 4190 4197 4202 4203 4209 4226 4238 4239 4245 4407\n",
-      " 4413 4419 4449 4622 4625 4628 4631 4658 4661 4662 4664 4667 4668 4839\n",
-      " 4844 4875 4880 5054 5055 5060 5061 5090 5091 5096 5097 5264 5270 5271\n",
-      " 5300 5306 5307 5487 5492 5523 5528 5702 5703 5709 5738 5739 5745 5912\n",
-      " 5918 5919 5924 5948 5954 5955 5960 6128 6134 6135 6140 6141 6164 6170\n",
-      " 6171 6176 6177 6344 6350 6351 6356 6357 6380 6386 6387 6392 6393 6566\n",
-      " 6602 6776 6782 6783 6788 6812 6818 6819 6824 6999 7004 7035 7040 7214\n",
-      " 7215 7250 7251 7430 7431 7466 7467 7647 7652 7683 7688 7863 7899 8078\n",
-      " 8079 8114 8115 8295 8300 8331 8336 8504 8505 8510 8511 8517 8540 8541\n",
-      " 8546 8547 8553 8726 8727 8732 8733 8762 8763 8768 8769 8942 8943 8948\n",
-      " 8949 8978 8979 8984 8985 9158 9159 9164 9165 9194 9195 9200 9201 9374\n",
-      " 9375 9380 9381 9410 9411 9416 9417 9590 9591 9596 9597 9626 9627 9632\n",
-      " 9633 9806 9807 9812 9813 9842 9843 9848 9849]\n",
-      "一共： 9618 个negative_sample!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import os\n",
@@ -750,6 +250,21 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__CB_Loss代码修改__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
